Added login functionality logic, product catalog and detail page, thumbnials logic dynamically change the main image based on the thumbnail clicked